# LEARN-PYTHON

./: README.md  ReminderOfDivision.py  SetsInPython.py  StringsInPython.py  advanceSets.py  andOrkeyword.py  booleansAndComparision.py  dictionary.py  gettingUserInput.py  joinningList.py  lengthAndSum.py  listInPython.py  newTuple.py  numbers.py  pyproject.toml  sec1Conclusion.py  stringFormating.py  tempCodeRunnerFile.py  tuplesInPython.py  variable.py
section-2/: biswa.py  break&Continue.py  comprehensionsWithCondition.py  destructuringSyntax.py  elseWithLoops.py  enumerateFunction.py  foorLoop.py  functions.py  ifStatements.py  iteratingInDictionaries.py  listCompression.py  listSliCing.py  listSliccing.py  primeNumberWithLoops.py  primeNumwithLoops.py  setDictionaryComprehensons.py  tempCodeRunnerFile.py  whileLoops.py  zipFunction.py
src/basic/: VARIABLES.PY
