[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
numpy = "^2.3.4"
[project]
name = "LearnPython"
version = "0.1.0"
description = "Learn Python"
authors = [
    {name = "Tusar Khatoi",email = "tusarkhatoi07@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = "==3.12.2"

[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"